fix unreadable app navigation

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -222,3 +222,13 @@
 #app-navigation .updateerror a {
     background-color: orange !important;
 }
+
+/**
+ * Fixes for owncloud/core#20208
+ */
+#app-navigation li a {
+    opacity: 1 !important; 
+}
+#app-navigation .active, #app-navigation .active a {
+    background-color: #ccc !important;
+}
